// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GiftExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2
    className="tittle"
  >
    GIF GENERATOR
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="dragon Ball"
      key="dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GiftExpertApp /> Hacer un snapShoot 1`] = `
<Fragment>
  <h2
    className="tittle"
  >
    GIF GENERATOR
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
